--- a/src/main/webapp/jspoc.html
+++ b/src/main/webapp/jspoc.html
@@ -1,16 +1,32 @@
 <!doctype html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Web Application Starter Project</title>
-    <script type="text/javascript" src="jspoc/jspoc.nocache.js"></script>
-  </head>
-  <body>
-    <script type="text/javascript">
-    	var obj = new poc.Hello();
-    	alert(obj.sayHello("there"));
-    </script>
-    <div id="rootPanel"></div>
-    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-  </body>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>Web Application Starter Project</title>
+<script type="text/javascript" src="jspoc/jspoc.nocache.js"></script>
+</head>
+<body>
+	<script type="text/javascript">
+		console.log("Main page script is executed, but GWT app yet has not loaded");
+
+
+		(function() {
+			console.log("Page has loaded, but GWT app again has not loaded yet!");
+
+			
+			// wait 3 more seconds for GWT to be loaded
+			setTimeout(function() {
+				console.log("3 seconds after page has loaded");
+				
+				var obj = new poc.JsHello();
+				alert(obj.sayHello("there"));
+				
+			}, 3000);
+
+		})();
+	</script>
+	<div id="rootPanel"></div>
+	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
+		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
+</body>
 </html>
